fix: fix gap of chart configurations

--- a/src/styles/pages/QueriesPage.scss
+++ b/src/styles/pages/QueriesPage.scss
@@ -285,8 +285,6 @@
       .main-chart {
         display: flex;
         width: 100%;
-        height: 100%;
-        gap: 30px;
 
         .show-full-visual {
           width: 100% !important;
